2011-06-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove references to non-existing files.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2010-06-29	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Remove AC_CHECK_SIZEOF([void *]).

2010-06-29	Joel Sherrill <Joel.Sherrill@OARcorp.com>

	* configure.ac: Added AC_CHECK_SIZEOF macro.

2010-05-23	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/consolelite.c, network/xiltemac.c:
	Reflect prototypes having changed (Warning removal).

2010-04-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* network/xiltemac.c, startup/bspstart.c: Remove warnings.

2010-03-27	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* dlentry/start.S: remove bootcard calling warning

2009-10-22	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am, preinstall.am: Update for exception support changes.
	* irq/irq.c: Changed exception header file includes.
	* startup/bspstart.c: Changed exception header file includes.  Update
	for ppc_exc_initialize() changes.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/virtex.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/linkcmds: Add __sbss_start, __sbss_end etc.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/virtex.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-07-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: Eliminate unused routine.
	* startup/setvec.c: Removed.
